--- a/styles/home.css
+++ b/styles/home.css
@@ -5,45 +5,50 @@
     width: 100vw;
 }
 
-.our-work-container {
+.our-work-meta {
     display: flex;
     justify-content: center;
 }
 
-.our-work {
+.our-work-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 100%;
     max-width: 1000px;
 }
 
-@media only screen and (max-width: 740px) {
-    .our-work {
-        flex-direction: column;
-    }
-}
-
-.our-work-section {
+.image-paragraph {
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-.our-work-section-title {
-    font-size: 25px;
-    font-weight: 700;
-    text-align: center;
+    justify-content: space-between;
 }
 
 .our-work-image {
-    width: 95%;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .our-work-link {
+    padding: 7px;
+    border: 2px solid white;
     text-decoration: none;
     color: white;
 }
 
-.our-work-link:hover {
-    text-decoration: underline;
+.our-work-link-container {
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.our-work-subheader {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.our-work-spacer {
+    height: 25px;
 }
